# kinu

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
bootloader/: Cargo.toml
bootloader/src/: elf.rs  main.rs
kernel/: Cargo.toml  build.rs  x86_64-unknown-none.json
kernel/.cargo/: config.toml
kernel/native/: wasmtime.S  wasmtime.c
kernel/src/: main.rs  mutex.rs  paging.rs  sample_app.cwasm
kernel/src/memory/: bitmap.rs  mod.rs  slob.rs
kernel/src/uart/: mod.rs  reg.rs
kernel/src/virtio/: mod.rs  pci.rs
lib/: Cargo.toml
lib/src/: elf.rs  lib.rs  mmap.rs
precompile/: Cargo.toml  sample_component.cwasm  sample_component.wasm
precompile/src/: main.rs
sample_app/: Cargo.toml
sample_app/src/: lib.rs
sample_app/wit/: world.wit
wasi-random/: Cargo.toml
wasi-random/.cargo/: config.toml
wasi-random/src/: insecure.rs  lib.rs  random.rs
wasi-random/wit/: world.wit
